Redesigned nav-bar distribution
MODIFY: Nav-bar distribution
Now, the Hosts, Services and Alerts actions are accessed using the
Monitoring option in the navbar, so it has more common sense and
less entries.

Also, the Bootstrap nav-bar has been corrected to resize on it's
original value.

ADD: MonitoringController
Added MonitoringController to been able to develop Hosts and Services
functionality. Also, added nav-bar links.

--- a/app/views/application/_navbar.erb
+++ b/app/views/application/_navbar.erb
@@ -14,14 +14,11 @@
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav">
         <li<% if params[:controller] == "panel" %> class="active"<% end %>><%= link_to t("ui.navbar.sections.home"), root_path() %></li>
-        <li><a href="#"><%= t("ui.navbar.sections.hosts") %></a></li>
-        <li><a href="#"><%= t("ui.navbar.sections.services") %></a></li>
+        <li<% if params[:controller] == "monitoring" %> class="active"<% end %>><%= link_to t("ui.navbar.sections.monitoring"), monitoring_path() %></li>
         <li><a href="#"><%= t("ui.navbar.sections.status_pages") %></a></li>
         <li><a href="#"><%= t("ui.navbar.sections.incidents") %></a></li>
-        <li><a href="#"><%= t("ui.navbar.sections.monitoring") %></a></li>
-        <li><a href="#"><%= t("ui.navbar.sections.alerts") %></a></li>
         <% if (current_user.is_normal?) %>
-          <li<% if (controller_name == "users") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.users"), users_path() %></li>
+          <li<% if ((controller_name == "users")&&(action_name != "preferences")&&(action_name != "save_preferences")) %> class="active"<% end %>><%= link_to t("ui.navbar.sections.users"), users_path() %></li>
         <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
