--- a/app/assets/stylesheets/bootstrap-cosmo/variables.css.less
+++ b/app/assets/stylesheets/bootstrap-cosmo/variables.css.less
@@ -306,8 +306,8 @@
 @grid-gutter-width:         30px;
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
-// @grid-float-breakpoint:     @screen-sm-min;
-@grid-float-breakpoint:     955px;
+@grid-float-breakpoint:     @screen-sm-min;
+// @grid-float-breakpoint:     955px;
 //** Point at which the navbar begins collapsing.
 @grid-float-breakpoint-max: (@grid-float-breakpoint - 1);
 
