Changes Bootstrap to SASS and used extends to simplify classes.
MODIFY: Change Bootstrap and Bootswatch to SASS versions
Changed to make possible to extend classes in order tosimplify classes
management and future changes.

ADD: Extends in sidebar and continer classes
Added to simplify future changes in one centralized file.

MODIFY: Stylesheets structure to avoid repeated code.
Now they use the @import method from the gem sass-rails to avoid
code repeat and make possible the @extend method using Bootstrap classes.

DELETE: Unused CSS and JS files.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,10 +1,9 @@
-/*
- *= stub bootstrap-cosmo/bootswatch
- *= stub bootstrap-cosmo/variables
- *= require twbs
- *= require_tree ./ui
- *= require_self
- */
+// This file is the main application CSS. 
+// It includes all the style rules for UI components and
+// the administration panels.
+
+@import "twbs"
+@import "ui/**/*"
 
 /* This is used to add padding because the content is behind the top fixed navbar. */
 body
