--- a/app/assets/stylesheets/error.css.sass
+++ b/app/assets/stylesheets/error.css.sass
@@ -1,9 +1,6 @@
-/*
- *= stub bootstrap-cosmo/bootswatch
- *= stub bootstrap-cosmo/variables
- *= require twbs
- *= require_self
- */
+// This is the CSS file for the error pages.
+
+@import "twbs"
 
 .error-div
   width: 700px
