--- a/app/assets/stylesheets/bootstrap-cosmo/bootswatch.scss
+++ b/app/assets/stylesheets/bootstrap-cosmo/bootswatch.scss
@@ -1,17 +1,19 @@
 // Cosmo 3.2.0
 // Bootswatch
 // -----------------------------------------------------
+@import "variables";
 @import "twbs/bootstrap";
-@import "variables.css.less";
 @import url("//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700");
 
 // Navbar =====================================================================
 
 .navbar {
-  &-inverse {
+
+  &:inverse {
+
     .badge {
       background-color: #fff;
-      color: @brand-primary;
+      color: $brand-primary;
     }
   }
 }
@@ -26,27 +28,27 @@ body {
 
 .text-primary,
 .text-primary:hover {
-  color: @brand-primary;
+  color: $brand-primary;
 }
 
 .text-success,
 .text-success:hover {
-  color: @brand-success;
+  color: $brand-success;
 }
 
 .text-danger,
 .text-danger:hover {
-  color: @brand-danger;
+  color: $brand-danger;
 }
 
 .text-warning,
 .text-warning:hover {
-  color: @brand-warning;
+  color: $brand-warning;
 }
 
 .text-info,
 .text-info:hover {
-  color: @brand-info;
+  color: $brand-info;
 }
 
 // Tables =====================================================================
@@ -77,13 +79,13 @@ table,
   .help-block,
   .control-label,
   .form-control-feedback {
-    color: @brand-warning;
+    color: $brand-warning;
   }
 
   .form-control,
   .form-control:focus,
   .input-group-addon {
-    border: 1px solid @brand-warning;
+    border: 1px solid $brand-warning;
   }
 }
 
@@ -91,13 +93,13 @@ table,
   .help-block,
   .control-label,
   .form-control-feedback {
-    color: @brand-danger;
+    color: $brand-danger;
   }
 
   .form-control,
   .form-control:focus,
   .input-group-addon {
-    border: 1px solid @brand-danger;
+    border: 1px solid $brand-danger;
   }
 }
 
@@ -105,13 +107,13 @@ table,
   .help-block,
   .control-label,
   .form-control-feedback {
-    color: @brand-success;
+    color: $brand-success;
   }
 
   .form-control,
   .form-control:focus,
   .input-group-addon {
-    border: 1px solid @brand-success;
+    border: 1px solid $brand-success;
   }
 }
 
@@ -162,7 +164,7 @@ table,
 
 .progress {
   height: 8px;
-  .box-shadow(none);
+  @include box-shadow(none);
   .progress-bar {
     font-size: 8px;
     line-height: 8px;
@@ -172,25 +174,25 @@ table,
 // Containers =================================================================
 
 .panel {
-  &-heading,
-  &-footer {
+  &:heading,
+  &:footer {
     border-top-right-radius: 0;
     border-top-left-radius: 0;
   }
 
-  &-default {
+  &:default {
     .close {
-      color: @text-color;
+      color: $text-color;
     }
   }
 }
 
 .modal {
   .close {
-    color: @text-color;
+    color: $text-color;
   }
 }
 
 .popover {
-  color: @text-color;
+  color: $text-color;
 }
