--- a/app/assets/stylesheets/devise.css.sass
+++ b/app/assets/stylesheets/devise.css.sass
@@ -1,9 +1,6 @@
-/*
- *= stub bootstrap-cosmo/bootswatch
- *= stub bootstrap-cosmo/variables
- *= require twbs
- *= require_self
- */
+// This is the CSS file for Devise (unauthorized users) parts.
+
+@import "twbs"
 
 body
   background-color: #fcfcfc
