--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
 <% content_for :title, t("users.index.title") %>
 <div class='row-fluid'>
-  <div class='col-lg-2 col-md-3 col-sm-4 sidebar'>
+  <div class='sidebar'>
     <%= render :partial => "sidebar" %>
   </div>
-  <div class='col-lg-10 col-md-9 col-sm-8 content'>
+  <div class='content'>
     <%= bootstrap_flash %>
     <div class="page-header clearfix">
       <h1>
