Added Host model and some other changes
ADD: Host model
Added Host model to store and validate information about hosts.
It has 5 different types of hosts and is able to convert addreses
to IPs using the system DNS client.

MODIFY: User model
Modified the privilege level constants to use the convention.

ADD: Translations for MonitoringController
Added a file of translations to include the sidebar's ones.

--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -6,9 +6,9 @@
     <hr class='divider' />
     <ul class="nav nav-pills nav-stacked">
       <li class='disabled'><a>View by privilege level</a></li>
-      <li class="<% if (action_name == "index" && @level == User::ADMINISTRATOR_USER) %>active<% end %>"><%= link_to t("users.sidebar.administrator_users"), users_path(:level => User::ADMINISTRATOR_USER) %></li>
-      <li class="<% if (action_name == "index" && @level == User::NORMAL_USER) %>active<% end %>"><%= link_to t("users.sidebar.normal_users"), users_path(:level => User::NORMAL_USER) %></li>
-      <li class="<% if (action_name == "index" && @level == User::GUEST_USER) %>active<% end %>"><%= link_to t("users.sidebar.guest_users"), users_path(:level => User::GUEST_USER) %></li>
+      <li class="<% if (action_name == "index" && @level == User::LEVEL_ADMINISTRATOR) %>active<% end %>"><%= link_to t("users.sidebar.administrator_users"), users_path(:level => User::LEVEL_ADMINISTRATOR) %></li>
+      <li class="<% if (action_name == "index" && @level == User::LEVEL_NORMAL) %>active<% end %>"><%= link_to t("users.sidebar.normal_users"), users_path(:level => User::LEVEL_NORMAL) %></li>
+      <li class="<% if (action_name == "index" && @level == User::LEVEL_GUEST) %>active<% end %>"><%= link_to t("users.sidebar.guest_users"), users_path(:level => User::LEVEL_GUEST) %></li>
     </ul>
   </div>
 </div>
