Added HostsController and an index method
ADD: HostsController
Added to manage the actions of index, view, create, update and
destroy hosts in the application database.

ADD: HostsController#index action
Used to show the hosts in the database. Also has per-type filtering
and searching in names, descriptions and addreses of hosts.
Includes pagination.

ADD: Custom sidebar for HostsController
Added a custom sidebar to include filtering options of HostsController#index

REMOVE: Some SASS file unused

MODIFY: Routes to include HostsController functionality

--- a/app/views/application/_navbar.erb
+++ b/app/views/application/_navbar.erb
@@ -13,8 +13,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav">
-        <li<% if params[:controller] == "panel" %> class="active"<% end %>><%= link_to t("ui.navbar.sections.home"), root_path() %></li>
-        <li<% if params[:controller] == "monitoring" %> class="active"<% end %>><%= link_to t("ui.navbar.sections.monitoring"), monitoring_path() %></li>
+        <li<% if (params[:controller] == "panel") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.home"), root_path() %></li>
+        <li<% if (params[:controller] == "monitoring") || (params[:controller] == "hosts") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.monitoring"), monitoring_path() %></li>
         <li><a href="#"><%= t("ui.navbar.sections.status_pages") %></a></li>
         <li><a href="#"><%= t("ui.navbar.sections.incidents") %></a></li>
         <% if (current_user.is_normal?) %>
