--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -52,8 +52,8 @@
       <thead>
         <tr>
           <th class='col-xs-1'></th>
-          <th class='col-xs-3'>Name</th>
-          <th class='col-xs-4'>E-mail</th>
+          <th class='col-xs-3'><%= t("users.table.name") %></th>
+          <th class='col-xs-4'><%= t("users.table.email") %></th>
           <th class='col-xs-4'></th>
         </tr>
       </thead>
