--- a/app/views/monitoring/_sidebar.html.erb
+++ b/app/views/monitoring/_sidebar.html.erb
@@ -1,11 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-body">
     <ul class="nav nav-pills nav-stacked">
-      <li class="<% if (controller_name == "monitoring") %>active<% end %>"><%= link_to t("monitoring.sidebar.monitoring"), monitoring_path() %></li>
-    </ul>
-    <hr class='divider' />
-    <ul class="nav nav-pills nav-stacked">
-      <li class="<% if (controller_name == "hosts") %>active<% end %>"><%= link_to t("monitoring.sidebar.hosts"), monitoring_path() %></li>
+      <li class="<% if (controller_name == "hosts") %>active<% end %>"><%= link_to t("monitoring.sidebar.hosts"), hosts_path() %></li>
       <li class="<% if (controller_name == "services") %>active<% end %>"><%= link_to t("monitoring.sidebar.services"), root_path() %></li>
       <li class="<% if (controller_name == "alerts") %>active<% end %>"><%= link_to t("monitoring.sidebar.alerts"), root_path() %></li>
     </ul>
