--- a/app/views/monitoring/index.html.erb
+++ b/app/views/monitoring/index.html.erb
@@ -1,9 +1,9 @@
 <% content_for :title, t("monitoring.index.title") %>
 <div class='row-fluid'>
-  <div class='col-lg-2 col-md-3 col-sm-4 sidebar'>
+  <div class='sidebar'>
     <%= render :partial => "sidebar" %>
   </div>
-  <div class='col-lg-10 col-md-9 col-sm-8 content'>
+  <div class='content'>
     <%= bootstrap_flash %>
     <h1>Nothing to show here (yet)</h1>
   </div>
