Added new and create actions of HostsController
ADD: New and Create actions of HostsController
Added actions to create new hosts on the application. Also added
the hosts form, and Strong Parameters on HostsController to avoid
mass assignment on Host model.

MODIFY: Navbar distribution
Now there is a new entry, Configuration. there is the management of
Hosts, Services and Alerts.

--- a/app/views/application/_navbar.erb
+++ b/app/views/application/_navbar.erb
@@ -14,9 +14,10 @@
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav">
         <li<% if (params[:controller] == "panel") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.home"), root_path() %></li>
-        <li<% if (params[:controller] == "monitoring") || (params[:controller] == "hosts") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.monitoring"), monitoring_path() %></li>
-        <li><a href="#"><%= t("ui.navbar.sections.status_pages") %></a></li>
+        <li<% if (params[:controller] == "monitoring") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.monitoring"), monitoring_path() %></li>
         <li><a href="#"><%= t("ui.navbar.sections.incidents") %></a></li>
+        <li><a href="#"><%= t("ui.navbar.sections.status_pages") %></a></li>
+        <li<% if ((params[:controller] == "hosts") || (params[:controller] == "services") || (params[:controller] == "alerts")) %> class="active"<% end %>><%= link_to t("ui.navbar.sections.configuration"), hosts_path() %></li>
         <% if (current_user.is_normal?) %>
           <li<% if ((controller_name == "users")&&(action_name != "preferences")&&(action_name != "save_preferences")) %> class="active"<% end %>><%= link_to t("ui.navbar.sections.users"), users_path() %></li>
         <% end %>
