--- a/app/views/hosts/_sidebar.html.erb
+++ b/app/views/hosts/_sidebar.html.erb
@@ -1,3 +1,12 @@
+<div class="panel panel-default">
+  <div class="panel-body">
+    <ul class="nav nav-pills nav-stacked">
+      <li class="<% if (controller_name == "hosts") %>active<% end %>"><%= link_to t("monitoring.sidebar.hosts"), hosts_path() %></li>
+      <li class="<% if (controller_name == "services") %>active<% end %>"><%= link_to t("monitoring.sidebar.services"), root_path() %></li>
+      <li class="<% if (controller_name == "alerts") %>active<% end %>"><%= link_to t("monitoring.sidebar.alerts"), root_path() %></li>
+    </ul>
+  </div>
+</div>
 <% if (action_name == "index") %>
 <div class="panel panel-default">
   <div class="panel-body">
