Added privilege level checks and show action in HostsController
ADD: Action show in HostsController
Used to show information about a host. It shows all the information
available about a selected host and provides links to edit and
delete it.

ADD: Privilege level check in HostsController
Only normal privilege or upper can create, update or destroy hosts.
Guest users can only list, search and see them.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,9 +19,11 @@
           <%= t("users.index.subtitle.guest") %>
           <% end %>
         </small>
+        <% if (current_user.is_administrator?) %>
         <span class='pull-right'>
           <%= link_to "<i class='fa fa-plus'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;<b>#{t("users.index.button.new")}</b></span>".html_safe, new_user_path(:level => @level), :class => "btn btn-success", :title => t("users.index.button.new") %>
         </span>
+        <% end %>
       </h1>
     </div>
     <div class='table-header clearfix'>
