--- a/app/views/hosts/index.html.erb
+++ b/app/views/hosts/index.html.erb
@@ -23,9 +23,11 @@
           <%= t("hosts.index.subtitle.generic") %>
           <% end %>
         </small>
+        <% if (current_user.is_normal?) %>
         <span class='pull-right'>
           <%= link_to "<i class='fa fa-plus'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;<b>#{t("hosts.index.button.new")}</b></span>".html_safe, new_host_path(:type => @type), :class => "btn btn-success", :title => t("hosts.index.button.new") %>
         </span>
+        <% end %>
       </h1>
     </div>
     <div class='table-header clearfix'>
