--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -61,13 +61,13 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="user_created_at" class="col-sm-3 control-label"><%= t("users.form.current_login") %></label>
+        <label for="user_current_login" class="col-sm-3 control-label"><%= t("users.form.current_login") %></label>
         <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><% if(!@user.current_sign_in_at.blank?) %><%= @user.current_sign_in_at.strftime("%d/%m/%Y - %H:%M") %> (IP: <%= @user.current_sign_in_ip %>)<% end %></p>
         </div>
       </div>
       <div class="form-group">
-        <label for="user_created_at" class="col-sm-3 control-label"><%= t("users.form.last_login") %></label>
+        <label for="user_last_login" class="col-sm-3 control-label"><%= t("users.form.last_login") %></label>
         <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><% if(!@user.last_sign_in_at.blank?) %><%= @user.last_sign_in_at.strftime("%d/%m/%Y - %H:%M") %> (IP: <%= @user.last_sign_in_ip %>)<% end %></p>
         </div>
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="user_created_at" class="col-sm-3 control-label"><%= t("users.form.updated_at") %></label>
+        <label for="user_updated_at" class="col-sm-3 control-label"><%= t("users.form.updated_at") %></label>
         <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= @user.updated_at.strftime("%m/%d/%Y - %H:%M") %></p>
         </div>
