Added some translations and actions of HostsController
ADD: Translations of notices and errors
Added some translations of notices and errors shown by the controller
of hosts.

MODIFY: Error handling in hosts form
Modified to get the difference between an address invalid error and
an address repeated error.

ADD: Actions for edit, update and destroy in HostsController
Added actions that allow to show an edit form, save the updated data
and destroy a host from the database.

--- a/app/views/hosts/_form.html.erb
+++ b/app/views/hosts/_form.html.erb
@@ -4,10 +4,17 @@
     <%= raw t("hosts.error.name_invalid") %>
   </div>
 <% elsif (!resource.errors[:address].blank?) %>
+  <% if (Host.where(:address => resource[:address]).ne(:_id => resource[:id]).count > 0) %>
+  <div class="alert alert-danger">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <%= raw t("hosts.error.address_repeated") %>
+  </div>
+  <% else %>
   <div class="alert alert-danger">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     <%= raw t("hosts.error.address_invalid") %>
   </div>
+  <% end %>
 <% elsif (!resource.errors[:type].blank?) %>
   <div class="alert alert-danger">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
