--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -1,24 +1,32 @@
 <% if (!resource.errors[:name].blank?) %>
   <div class="alert alert-danger">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <%= raw t("hosts.error.name_invalid") %>
+    <%= raw t("services.error.name_invalid") %>
   </div>
-<% elsif (!resource.errors[:address].blank?) %>
-  <% if (Host.where(:address => resource[:address]).ne(:_id => resource[:id]).count > 0) %>
+<% elsif (!resource.errors[:probe].blank?) %>
   <div class="alert alert-danger">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <%= raw t("hosts.error.address_repeated") %>
+    <%= raw t("services.error.probe_invalid") %>
   </div>
-  <% else %>
+<% elsif (!resource.errors[:interval].blank?) %>
   <div class="alert alert-danger">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <%= raw t("hosts.error.address_invalid") %>
+    <%= raw t("services.error.interval_invalid") %>
   </div>
-  <% end %>
-<% elsif (!resource.errors[:type].blank?) %>
+<% elsif (!resource.errors[:clean_interval].blank?) %>
   <div class="alert alert-danger">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <%= raw t("hosts.error.type_invalid") %>
+    <%= raw t("services.error.clean_interval_invalid") %>
+  </div>
+<% elsif (!resource.errors[:priority].blank?) %>
+  <div class="alert alert-danger">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <%= raw t("services.error.priority_invalid") %>
+  </div>
+<% elsif (!resource.errors[:resume].blank?) %>
+  <div class="alert alert-danger">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <%= raw t("services.error.resume_invalid") %>
   </div>
 <% end %>
 <%= form_for resource, :html => {:class => "form-horizontal"} do |f| %>
