Added edit/update, show and destroy action for ServicesController
ADD: Edit/update, show and destroy actions for ServicesController
This allows to perform all the CRUD operations with Services.
To do is the configuration interface of the probes. It's the next step.

--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -28,7 +28,7 @@
       <div class="form-group">
         <label for="host_type" class="col-sm-3 control-label"><%= t("hosts.form.type") %></label>
         <div class="col-md-7 col-sm-9">
-          <p class="form-control-static"><%= t("hosts.types.type_#{@host.type}") %></p>
+          <p class="form-control-static"><%= t("hosts.types.type_#{@host.type.to_s}") %></p>
         </div>
       </div>
       <div class="form-group">
