--- a/app/views/hosts/_form.html.erb
+++ b/app/views/hosts/_form.html.erb
@@ -36,7 +36,7 @@
   <div class="form-group<% if (!resource.errors[:type].blank?) %> has-error<% end %>">
     <label for="host_type" class="col-sm-2 control-label"><%= t("hosts.form.type") %></label>
     <div class="col-md-7 col-sm-10">
-      <%= f.select :type, options_for_select(host_types_hash(), :selected => resource.type), {}, :class => "form-control" %>
+      <%= f.select :type, options_for_select(host_types_hash(), :selected => resource.type.to_s), {}, :class => "form-control" %>
     </div>
   </div>
   <div class="form-group<% if (!resource.errors[:address].blank?) %> has-error<% end %>">
