--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -88,6 +88,17 @@
         </div>
       </div>
       <div class="form-group">
+        <label for="service_hosts" class="col-sm-3 control-label"><%= t("services.form.hosts") %></label>
+        <div class="col-md-7 col-sm-9">
+          <p class="form-control-static"><%= @service.hosts.to_a.map{|h| h = h.name}.join(", ") %></p>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-3 col-md-7 col-sm-9">
+          <hr class='divider' />
+        </div>
+      </div>
+      <div class="form-group">
         <label for="service_created_at" class="col-sm-3 control-label"><%= t("services.form.created_at") %></label>
         <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= @service.created_at.strftime("%m/%d/%Y - %H:%M") %></p>
