--- a/app/views/application/_navbar.erb
+++ b/app/views/application/_navbar.erb
@@ -17,7 +17,7 @@
         <li<% if (params[:controller] == "monitoring") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.monitoring"), monitoring_path() %></li>
         <li><a href="#"><%= t("ui.navbar.sections.incidents") %></a></li>
         <li><a href="#"><%= t("ui.navbar.sections.status_pages") %></a></li>
-        <li<% if ((params[:controller] == "hosts") || (params[:controller] == "services") || (params[:controller] == "alerts")) %> class="active"<% end %>><%= link_to t("ui.navbar.sections.configuration"), hosts_path() %></li>
+        <li<% if ((params[:controller] == "hosts") || (params[:controller] == "services") || (params[:controller] == "alerts")) %> class="active"<% end %>><%= link_to t("ui.navbar.sections.configuration"), services_path() %></li>
         <% if (current_user.is_normal?) %>
           <li<% if ((controller_name == "users")&&(action_name != "preferences")&&(action_name != "save_preferences")) %> class="active"<% end %>><%= link_to t("ui.navbar.sections.users"), users_path() %></li>
         <% end %>
