--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -54,6 +54,17 @@
         </div>
       </div>
       <div class="form-group">
+        <label for="host_services" class="col-sm-3 control-label"><%= t("hosts.form.services") %></label>
+        <div class="col-md-7 col-sm-9">
+          <p class="form-control-static"><%= @host.services.to_a.map{|s| s = s.name}.join(", ") %></p>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-3 col-md-7 col-sm-9">
+          <hr class='divider' />
+        </div>
+      </div>
+      <div class="form-group">
         <label for="host_created_at" class="col-sm-3 control-label"><%= t("hosts.form.created_at") %></label>
         <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= @host.created_at.strftime("%m/%d/%Y - %H:%M") %></p>
