--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -82,19 +82,19 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-md-offset-3 col-md-7 col-sm-12">
+        <div class="col-md-offset-1 col-md-9 col-sm-12">
           <% if (current_user.is_normal?) %>
           <div class='pull-right'>
-            <%= link_to "<i class='fa fa-pencil'></i>&nbsp;&nbsp;#{t("hosts.index.button.edit")}".html_safe, edit_host_path(@host), :class => "btn btn-info", :title => t("hosts.index.button.edit") %>
-            <%= link_to "<i class='fa fa-trash-o'></i>&nbsp;&nbsp;#{t("hosts.index.button.destroy")}".html_safe, host_path(@host), :method => :delete, :class => "btn btn-danger", :title => t("hosts.index.button.destroy"), :data => {:confirm => t("hosts.index.button.destroy_confirmation")} %>
+            <%= link_to "<i class='fa fa-pencil'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("hosts.index.button.edit")}</span>".html_safe, edit_host_path(@host), :class => "btn btn-info", :title => t("hosts.index.button.edit") %>
+            <%= link_to "<i class='fa fa-trash-o'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("hosts.index.button.destroy")}</span>".html_safe, host_path(@host), :method => :delete, :class => "btn btn-danger", :title => t("hosts.index.button.destroy"), :data => {:confirm => t("hosts.index.button.destroy_confirmation")} %>
           </div>
           <% else %>
           <div class='pull-right'>
-            <%= link_to "<i class='fa fa-pencil'></i>&nbsp;&nbsp;#{t("hosts.index.button.edit")}".html_safe, nil, :class => "btn btn-info disabled", :title => t("hosts.index.button.edit") %>
-            <%= link_to "<i class='fa fa-trash-o'></i>&nbsp;&nbsp;#{t("hosts.index.button.destroy")}".html_safe, nil, :class => "btn btn-danger disabled", :title => t("hosts.index.button.destroy")%>
+            <%= link_to "<i class='fa fa-pencil'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("hosts.index.button.edit")}</span>".html_safe, nil, :class => "btn btn-info disabled", :title => t("hosts.index.button.edit") %>
+            <%= link_to "<i class='fa fa-trash-o'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("hosts.index.button.destroy")}</span>".html_safe, nil, :class => "btn btn-danger disabled", :title => t("hosts.index.button.destroy")%>
           </div>
           <% end %>
-          <%= link_to t("hosts.new.back"), hosts_path(:type => @type), :class => "btn btn-default pull-left" %>
+          <%= link_to "<i class='fa fa-chevron-left'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("hosts.new.back")}</span>".html_safe, hosts_path(:type => @type), :class => "btn btn-default pull-left" %>
         </div>
       </div>
     </div>
