--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -117,18 +117,17 @@
       </div>
       <div class="form-group">
         <div class="col-md-offset-1 col-md-9 col-sm-12">
-          <% if (current_user.is_normal?) %>
           <div class='pull-right'>
-            <%= link_to "<i class='fa fa-pencil'></i>&nbsp;&nbsp;#{t("services.index.button.edit")}".html_safe, edit_service_path(@service), :class => "btn btn-info", :title => t("services.index.button.edit") %>
-            <%= link_to "<i class='fa fa-trash-o'></i>&nbsp;&nbsp;#{t("services.index.button.destroy")}".html_safe, service_path(@service), :method => :delete, :class => "btn btn-danger", :title => t("services.index.button.destroy"), :data => {:confirm => t("services.index.button.destroy_confirmation")} %>
+            <%= link_to "<i class='fa fa-laptop'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("services.index.button.hosts")}</span>".html_safe, service_hosts_path(@service), :class => "btn btn-warning", :title => t("services.index.button.hosts") %>
+            <% if (current_user.is_normal?) %>
+            <%= link_to "<i class='fa fa-pencil'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("services.index.button.edit")}</span>".html_safe, edit_service_path(@service), :class => "btn btn-info", :title => t("services.index.button.edit") %>
+            <%= link_to "<i class='fa fa-trash-o'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("services.index.button.destroy")}</span>".html_safe, service_path(@service), :method => :delete, :class => "btn btn-danger", :title => t("services.index.button.destroy"), :data => {:confirm => t("services.index.button.destroy_confirmation")} %>
+            <% else %>
+              <%= link_to "<i class='fa fa-pencil'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("services.index.button.edit")}</span>".html_safe, nil, :class => "btn btn-info disabled", :title => t("services.index.button.edit") %>
+              <%= link_to "<i class='fa fa-trash-o'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("services.index.button.destroy")}</span>".html_safe, nil, :class => "btn btn-danger disabled", :title => t("services.index.button.destroy")%>
+            <% end %>
           </div>
-          <% else %>
-          <div class='pull-right'>
-            <%= link_to "<i class='fa fa-pencil'></i>&nbsp;&nbsp;#{t("services.index.button.edit")}".html_safe, nil, :class => "btn btn-info disabled", :title => t("services.index.button.edit") %>
-            <%= link_to "<i class='fa fa-trash-o'></i>&nbsp;&nbsp;#{t("services.index.button.destroy")}".html_safe, nil, :class => "btn btn-danger disabled", :title => t("services.index.button.destroy")%>
-          </div>
-          <% end %>
-          <%= link_to t("services.new.back"), services_path(:priority => @priority), :class => "btn btn-default pull-left" %>
+          <%= link_to "<i class='fa fa-chevron-left'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("services.new.back")}</span>".html_safe, services_path(:priority => @priority), :class => "btn btn-default pull-left" %>
         </div>
       </div>
     </div>
