--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -93,9 +93,9 @@
     </div>
   </div>
   <div class="form-group">
-    <div class="col-md-offset-2 col-md-7 col-xs-12">
+    <div class="col-md-offset-1 col-md-9 col-sm-12">
       <%= f.button "#{t("users.#{action_name}.continue")}&nbsp;&nbsp;<i class='fa fa-chevron-right'></i>".html_safe, :type => "submit", :class => "btn btn-primary pull-right" %>
-      <%= link_to t("users.new.back"), users_path(:level => @level), :class => "btn btn-default pull-left" %>
+      <%= link_to "<i class='fa fa-chevron-left'></i><span class='hidden-sm hidden-xs'>&nbsp;&nbsp;#{t("users.new.back")}</span>".html_safe, users_path(:level => @level), :class => "btn btn-default pull-left" %>
     </div>
   </div>
 <% end %>
