--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -21,6 +21,12 @@
         </div>
       </div>
       <div class="form-group">
+        <label for="host_description" class="col-sm-3 control-label"><%= t("hosts.form.description") %></label>
+        <div class="col-md-7 col-sm-9">
+          <p class="form-control-static"><%= @host.description %></p>
+        </div>
+      </div>
+      <div class="form-group">
         <div class="col-sm-offset-3 col-md-7 col-sm-9">
           <hr class='divider' />
         </div>
@@ -43,9 +49,13 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="host_description" class="col-sm-3 control-label"><%= t("hosts.form.description") %></label>
+        <label for="host_active" class="col-sm-3 control-label"><%= t("hosts.form.activation") %></label>
         <div class="col-md-7 col-sm-9">
-          <p class="form-control-static"><%= @host.description %></p>
+          <% if (@host.is_active?) %>
+          <p class="form-control-static text-success"><%= t("hosts.form.active") %></p>
+          <% else %>
+          <p class="form-control-static text-danger"><%= t("hosts.form.inactive") %></p>
+          <% end %>
         </div>
       </div>
       <div class="form-group">
