--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -32,6 +32,16 @@
         </div>
       </div>
       <div class="form-group">
+        <label for="service_active" class="col-sm-3 control-label"><%= t("services.form.activation") %></label>
+        <div class="col-md-7 col-sm-9">
+          <% if (@service.is_active?) %>
+          <p class="form-control-static text-success"><%= t("services.form.active") %></p>
+          <% else %>
+          <p class="form-control-static text-danger"><%= t("services.form.inactive") %></p>
+          <% end %>
+        </div>
+      </div>
+      <div class="form-group">
         <label for="service_priority" class="col-sm-3 control-label"><%= t("services.form.priority") %></label>
         <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= t("services.priorities.priority_#{@service.priority.to_s}") %></p>
