Added tests to check the functionality of ServicesController

--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -84,7 +84,7 @@
     </div>
   </div>
   <div id='probe-config-container'>
-    <%= render "/probe_form.html.erb", :config => resource.probe_config, :errors => resource.errors[:probe_config] %>
+    <%= render "/probe_form.html.erb", :resource => resource.probe_config, :errors => resource.errors[:probe_config] %>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-md-7 col-sm-10">
