Added index, new and create actions for AlertsController

--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -115,7 +115,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="services_updated_at" class="col-sm-3 control-label"><%= t("service.form.updated_at") %></label>
+        <label for="services_updated_at" class="col-sm-3 control-label"><%= t("services.form.updated_at") %></label>
         <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= @service.updated_at.strftime("%m/%d/%Y - %H:%M") %></p>
         </div>
