--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -54,9 +54,9 @@
     </div>
   </div>
   <div class="form-group<% if (!resource.errors[:service].blank?) %> has-error<% end %>">
-    <label for="alert_service" class="col-sm-2 control-label"><%= t("alerts.form.service") %></label>
+    <label for="alert_service_id" class="col-sm-2 control-label"><%= t("alerts.form.service") %></label>
     <div class="col-md-7 col-sm-10">
-      <%= f.select :service, options_for_select(alert_services_hash(), :selected => resource.service_id), {}, :class => "form-control" %>
+      <%= f.select :service_id, options_for_select(alert_services_hash(), :selected => resource.service_id), {}, :class => "form-control" %>
       <span class="help-block"><%= t("alerts.form.service_helper") %></span>
     </div>
   </div>
