--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -56,7 +56,7 @@
     <label for="user_level" class="col-sm-2 control-label"><%= t("users.form.privilege_level") %></label>
     <div class="col-md-7 col-sm-10">
       <% if (resource.id != current_user.id) %>
-        <%= f.select :level, options_for_select(levels_hash(), :selected => resource.level), {}, :class => "form-control" %>
+        <%= f.select :level, options_for_select(user_levels_hash(), :selected => resource.level), {}, :class => "form-control" %>
       <% else %>
         <p class="form-control-static"><%= t("users.levels.level_#{resource.level}") %></p>
         <span class="help-block"><%= t("users.form.privilege_level_yourself") %></span>
@@ -84,7 +84,7 @@
   <div class="form-group<% if (!resource.errors[:lang].blank?) %> has-error<% end %>">
     <label for="user_lang" class="col-sm-2 control-label"><%= t("users.form.language") %></label>
     <div class="col-md-7 col-sm-10">
-      <%= f.select :lang, options_for_select(languages_hash(), :selected => resource.lang), {}, :class => "form-control" %>
+      <%= f.select :lang, options_for_select(user_languages_hash(), :selected => resource.lang), {}, :class => "form-control" %>
     </div>
   </div>
   <div class="form-group">
