--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -77,7 +77,7 @@
           <div class="form-group<% if (!@user.errors[:lang].blank?) %> has-error<% end %>">
             <label for="user_lang" class="col-sm-2 control-label"><%= t("users.form.language") %></label>
             <div class="col-sm-7">
-              <%= f.select :lang, options_for_select(languages_hash(), :selected => @user.lang), {}, :class => "form-control" %>
+              <%= f.select :lang, options_for_select(user_languages_hash(), :selected => @user.lang), {}, :class => "form-control" %>
             </div>
           </div>
           <div class="form-group">
