--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -99,7 +99,7 @@
     </div>
   </div>
   <div class="form-group<% if (!resource.errors[:clean_interval].blank?) %> has-error<% end %>">
-    <label for="service_interval" class="col-sm-2 control-label"><%= t("services.form.interval") %></label>
+    <label for="service_interval" class="col-sm-2 control-label"><%= t("services.form.clean_interval") %></label>
     <div class="col-md-7 col-sm-10">
       <%= f.number_field :clean_interval, :min => 1, :step => 1, :class => "form-control", :placeholder => t("services.form.clean_interval_placeholder"), :required => true %>
       <span class="help-block"><%= t("services.form.clean_interval_helper") %></span>
